Testing Part is started

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
-spring.application.name=ticketing_project_rest_security_testing
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing-app
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.show-sql=false
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.mode=always
+
+spring.jpa.defer-datasource-initialization=true
+
+keycloak.realm=cydeo-dev
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.ssl-required=external
+keycloak.resource=ticketing-app
+keycloak.credentials.secret=Hz2FwVuQqbd0FNMifsRryOZyzOW348kn
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+spring.main.allow-circular-references=true
+
+master.user=admin
+master.user.password=admin
+master.realm=master
+master.client=master-client
+
+#whenever springboot is trying to create any user it is looking for one client under master,
+#so we need to create master and now we need to go to master we need to create that client
+
+#debug=true
+
+#debug is log level with more detail
+
+#trace=true
+#so many code it is showing happening in the app
