--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ticketing-app
 keycloak.credentials.secret=Hz2FwVuQqbd0FNMifsRryOZyzOW348kn
+#it is my credential
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.main.allow-circular-references=true
