--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,19 +1,24 @@
 property.path=/Users/HP/Documents/logs
+#I should pass mine path
 #
+#These are appenders name--> Appenders type -->console appender, file appender, rolling appender...
 ##appenders=console, file
 appenders=console, rolling
 
+#This is for managing the logs in my console
 appender.console.type=Console
 appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
 appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-appender.file.type=File
-appender.file.name=LOGFILE
-appender.file.fileName=${path}/app.log
-appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+#This is for managing the logs in file
+#appender.file.type=File
+#appender.file.name=LOGFILE
+#appender.file.fileName=${path}/app.log
+#appender.file.layout.type=PatternLayout
+#appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
+#We are defining some logs
 ##loggers=file
 loggers=rolling
 #
@@ -22,6 +27,7 @@ loggers=rolling
 #logger.file.appenderRefs=file
 #logger.file.appenderRef.file.ref=LOGFILE
 #
+#The other appenders type--> rolling appender, if a file needs to a certain size, it should create new file
 rootLogger.level=INFO
 rootLogger.appenderRefs=console
 rootLogger.appenderRef.console.ref=STDOUT
